DuPont DevSB/src/objects/pse__Resource_Actuals__c.object
<CustomObject>
    <customHelpPage>pse__ResourceActualsHelp</customHelpPage>
    <description>Represent rolled-up totals (for example, billable hours) for the resource, expressed in the resource&apos;s currency for a particular time period. Contacts (Resource records) and time periods have a master-detail relationship with resource actuals.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Bookings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Credited_Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <formula>pse__Time_Period__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Excluded_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__External_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>External Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Is_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contains true if this record serves to verify the contents of another record</description>
        <label>Is Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Margin__c</fullName>
        <formula>pse__Billings__c + pse__Pass_Through_Billings__c - pse__Internal_Costs__c - pse__External_Costs__c - pse__Expense_Costs__c - pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Other_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Pass_Through_Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pass-Through Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Pre_Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pre-Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Actuals</relationshipLabel>
        <relationshipName>Resource_Actuals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Revenue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <formula>pse__Time_Period__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Resource Actuals</relationshipLabel>
        <relationshipName>Resource_Actuals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Total_Costs__c</fullName>
        <formula>pse__Internal_Costs__c + pse__External_Costs__c + pse__Expense_Costs__c + pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Time_Period_Hours__c</fullName>
        <label>Total Time Period Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Unique_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Utilization_Calculation_Date__c</fullName>
        <label>Utilization: Last Calculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Elapsed_Hours__c</fullName>
        <label>Utilization: Elapsed Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Over_Full_Time_Period__c</fullName>
        <formula>IF((pse__Total_Time_Period_Hours__c&gt;pse__Excluded_Hours__c),IF(AND(NOT(ISNULL(pse__Billable_Internal_Hours__c)),NOT(ISNULL(pse__Credited_Non_Billable_Internal_Hours__c)),NOT(ISNULL(pse__Total_Time_Period_Hours__c)),NOT(ISNULL(pse__Excluded_Hours__c))),(pse__Billable_Internal_Hours__c + pse__Credited_Non_Billable_Internal_Hours__c)/(pse__Total_Time_Period_Hours__c - pse__Excluded_Hours__c),0.00),0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization: Over Full Time Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization__c</fullName>
        <formula>IF((pse__Utilization_Elapsed_Hours__c&gt;pse__Excluded_Hours__c),IF(AND(NOT(ISNULL(pse__Billable_Internal_Hours__c)),NOT(ISNULL(pse__Credited_Non_Billable_Internal_Hours__c)),NOT(ISNULL(pse__Utilization_Elapsed_Hours__c)),NOT(ISNULL(pse__Excluded_Hours__c))),(pse__Billable_Internal_Hours__c + pse__Credited_Non_Billable_Internal_Hours__c)/(pse__Utilization_Elapsed_Hours__c - pse__Excluded_Hours__c),0.00),0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Verified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self-join to store a temporary recalculation of the actuals for verification purposes</description>
        <label>Verified By</label>
        <referenceTo>pse__Resource_Actuals__c</referenceTo>
        <relationshipLabel>Resource Actuals</relationshipLabel>
        <relationshipName>Resource_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Resource Actuals</label>
    <nameField>
        <label>Resource Actuals For</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Resource_Actuals_Currency_Mismatch</fullName>
        <active>true</active>
        <description>A Resource Actuals record must have the same currency as its parent Resource.</description>
        <errorConditionFormula>AND
(
OR(ISNEW(),ISCHANGED(CurrencyIsoCode)), 
NOT(TEXT(CurrencyIsoCode) = TEXT(pse__Resource__r.CurrencyIsoCode))
)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>A Resource Actuals record must have the same currency as its parent Resource.</errorMessage>
    </validationRules>
</CustomObject>